# agent-platform-app

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  admin_panel.py  app.py  chunking_strategies.py  create-indexes.py  document_processor.py  example_memory_usage.py  memory_graph.py  memory_manager.py  persona_manager.py  requirements.txt  seed_kb.py  seed_kb_enhanced.py  slack_bot.py  slack_debug.py  start_admin.py
.github/: SECURITY.md
core_instructions/: business.txt  default.txt  technical.txt
personas/: business_advisor.txt  helpful_assistant.txt  technical_expert.txt
schemas/: agent-kb-schema.yaml  history-schema.yaml
storage-abstraction-api/: .env.example  .gitignore  Makefile  README.md  TEST_PLAN.md  TROUBLESHOOTING.md  pyproject.toml  quick_test.sh  test_script.py
storage-abstraction-api/client/py/: storage_client.py
storage-abstraction-api/docker/: Dockerfile  docker-compose.yml
storage-abstraction-api/src/app/: __init__.py  config.py  deps.py  main.py
storage-abstraction-api/src/app/adapters/: __init__.py
storage-abstraction-api/src/app/adapters/chat/: __init__.py  postgres_adapter.py  redis_adapter.py
storage-abstraction-api/src/app/adapters/graph/: __init__.py  neo4j_adapter.py
storage-abstraction-api/src/app/adapters/vector/: __init__.py  pgvector_adapter.py  redis_adapter.py
storage-abstraction-api/src/app/ports/: __init__.py  chat_port.py  graph_port.py  vector_port.py
storage-abstraction-api/src/app/routers/: chat.py  graph.py  vector.py
storage-abstraction-api/src/app/schema/: chat.py  graph.py  vector.py
(+14 files in other folders)
