[project]
name = "storage-abstraction-api"
version = "0.1.0"
description = "FastAPI storage abstraction for vector, chat, graph"
requires-python = ">=3.10"
dependencies = [
  "fastapi~=0.114",
  "uvicorn[standard]~=0.30",
  "pydantic~=2.8",
  "pydantic-settings~=2.4",
  "sqlalchemy~=2.0",
  "asyncpg~=0.29",
  "psycopg[binary]~=3.2",
  "pgvector~=0.3",
  "alembic~=1.13",
  "neo4j~=5.23",
  "redis~=5.0",
  "numpy~=1.26",
  "httpx~=0.27",
  "orjson~=3.10",
  "python-json-logger~=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3",
  "pytest-asyncio~=0.23",
]

[tool.uvicorn]
factory = false